...
    <string name="hours">Hours</string>
    <string name="add_plan">Add Plan</string>
    <string name="dashboard_card_plan_sr">Your plan for Today</string>
    <string name="dashboard_card_plan_progress_text_sr">%1$d of %2$d completed</string>
    <string name="dashboard_card_plan_progress_percentage_sr">%1$d%%</string>
    <string name="dashboard_daily_review_text_sr">Daily Review</string>
    <string name="empty_field">Required field empty</string>
    <string name="dashboard_datepicker_title">Select Day</string>
    <string name="dashboard_RV_item_hour_sr">%1$02d:%2$02d</string>
    <string name="appointment_RV_item_hour_sr">%1$02d:%2$02d</string>
    <string name="appointment_RV_item_date_sr">%1$d, %2$s</string>
    <string name="dashboard_RV_item_pill_number_sr">%1$s Pill</string>
    <string name="rv_item_status_during_meals_sr">During Meals</string>
...
